--- a/demo/src/assets/common.less
+++ b/demo/src/assets/common.less
@@ -1,20 +1,27 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-html{
+
+html {
   font-size: 16px;
 }
-h1.title{
+
+h1.title {
   color: #f1f8ff;
-  background:#f1b0b7;
+  background: #f1b0b7;
   text-align: center;
 }
 
-.box-content{
+.box-content {
   background: #f3e1e1;
 }
 
-.clear{
-  clear:both;
+.clear {
+  clear: both;
+}
+
+.com-wrap {
+  width: 700px;
+  margin: 20px auto;
 }
